--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 
   <!-- 縮圖 (點這個播放 toyz666.mp4) -->
   <div id="thumbnail" onclick="playVideo('toyz666.mp4')">
-    <img src="C:\Users\xcorn\Desktop\HTML\1746009022712-2cd5a2c17e78440fb861a3bf117bc0e4-871x549.jpg" alt="影片縮圖">
+    <img src="1746009022712-2cd5a2c17e78440fb861a3bf117bc0e4-871x549.jpg" alt="影片縮圖">
+
   </div>
 
   <!-- 假畫面按鈕 (點這個播放 never_gonna_give_you_up.mp4) -->
@@ -129,3 +130,4 @@
     25%, 75% { opacity: 0; }
   }
 </style>
+
